<resources>
    <string name="app_name">MyBLEScanner</string>
    <string name="BLE_not_supported">BLE is not supported</string>
    <string name="scanBLE">Scan BLE</string>
    <string name="position">Position</string>
    <string name="clrBLEList">Clr BLE List</string>
    <string name="WiFi">WiFi</string>
    <string name="LPDLTest">LPDL Test</string>
    <string name="LDPLTestInfo">Es werden eine Reihe von Messungen durchgeführt. Diese Messung dauert ca. 4 Minuten. Bitte folgen Sie den Anweisungen</string>
    <string name="LPDLTestInstruction">Anweisungen</string>

    <string name="Next">Weiter</string>
    <string name="Measurement">Messung</string>
    <string name="TotalProgress">Gesamtfortschritt</string>
    <string name="BleDevice">BLE Device</string>
    <string name="Cancel">Abbrechen</string>
    <string name="LPDLResults">LDPL Results</string>
    <string name="ExportCSV">CSV-Export und weiter zu Raum</string>
    <string-array name="WiFiSpinner">
        <item>Ausgeblendet</item>
        <item>WiFi Scan</item>
        <item>Wifi Connection</item>
    </string-array>
    <string-array name="LDPLTest">
        <item>Legen Sie das Handy genau auf den BLE Transmitter, klicken Sie auf Weiter und warten Sie bis der Scanvorgang abgeschlossen ist.</item>
        <item>Halten sie das Handy 10cm vom Transmitter entfernt, klicken Sie auf Weiter und warten Sie bis der Scanvorgang abgeschlossen ist.</item>
        <item>Halten sie das Handy 50cm vom Transmitter entfernt, klicken Sie auf Weiter und warten Sie bis der Scanvorgang abgeschlossen ist.</item>
        <item>Halten sie das Handy 1m vom Transmitter entfernt, klicken Sie auf Weiter und warten Sie bis der Scanvorgang abgeschlossen ist.</item>
        <item>Halten sie das Handy 2m vom Transmitter entfernt, klicken Sie auf Weiter und warten Sie bis der Scanvorgang abgeschlossen ist.</item>
        <item>Halten sie das Handy 3m vom Transmitter entfernt, klicken Sie auf Weiter und warten Sie bis der Scanvorgang abgeschlossen ist.</item>
        <item>Halten sie das Handy 4m vom Transmitter entfernt, klicken Sie auf Weiter und warten Sie bis der Scanvorgang abgeschlossen ist.</item>
        <item>Halten sie das Handy 6m vom Transmitter entfernt, klicken Sie auf Weiter und warten Sie bis der Scanvorgang abgeschlossen ist.</item>
        <item>Halten sie das Handy 8m vom Transmitter entfernt, klicken Sie auf Weiter und warten Sie bis der Scanvorgang abgeschlossen ist.</item>
        <item>Halten sie das Handy 10m vom Transmitter entfernt, klicken Sie auf Weiter und warten Sie bis der Scanvorgang abgeschlossen ist.</item>
    </string-array>
    <string-array name="LPDLResults">
        <item>0.0</item>
        <item>0.1</item>
        <item>0.5</item>
        <item>1.0</item>
        <item>2.0</item>
        <item>3.0</item>
        <item>4.0</item>
        <item>6.0</item>
        <item>8.0</item>
        <item>10.0</item>
    </string-array>
    <string-array name="rooms">
        <item>Room103</item>
    </string-array>

    <string name="title_activity_map">MapActivity</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>+

    <string name="searchingPosition">Bitte warten Sie ca. 20 Sekunden, die aktuelle Position wird ermittelt.</string>
    <string name="ShowRoom">Zeige Raum</string>
    <string name="Refresh">Aktualisieren</string>
    <string name="calcPostion">Berechne Position</string>
    <string name="InitBeacons">Init Beacons</string>
</resources>
